# clockwise

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CHECKLIST.md  CMakeLists.txt  CNAME  Gemfile  LICENSE  PosixTimezoneStrings.txt  README.md  _config.yml  index.md  platformio.ini  sdkconfig.defaults  welcome.md
.github/workflows/: clockwise-ci.yml  esp-idf.yml
_includes/: head-custom-google-analytics.html  head-custom.html
_layouts/: default.html
assets/css/: style.scss
clockfaces/mario/: Clockface.h
clockfaces/words/: Clockface.h  minute7pt7b.h  wordscf.cpp  wordscf.h
docs/: api.md  openapi.yml  soldering-guide.md  troubleshooting-guide.md
firmware/: .gitignore  platformio.ini
firmware/lib/: clocktower  mario  pacman  timeinwords  words
firmware/lib/cw-commons/: CMakeLists.txt  CWBLEServer.h  CWDateTime.cpp  CWDateTime.h  CWHttpClient.h  CWPreferences.h  CWWebServer.h  DateTime.cpp  IClockface.h  IOManager.h  Icons.h  README.md  SettingsWebPage.h  StatusController.h  WiFiConnect.h  WiFiController.h  picopixel.h
firmware/src/: Clockface.cpp  Clockface.h  DeviceManager.cpp  DeviceManager.hpp  DisplayLedMatrix.cpp  DisplayLedMatrix.hpp  main.cpp
lib/engine/: Display.cpp  Display.h  EventBus.cpp  Fake_GFX.h  Locator.cpp  Object.h  Tile.h
m5-clockwise/: platformio.ini
m5-clockwise/src/: main.cpp
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
pcb/: PinSocket_2x08_P2.54mm_Vertical_SMD_LedMatrix.kicad_mod  SW_PUSH.kicad_mod  cloc.kicad_mod  clockwise.dcm  clockwise.lib  clockwise1.kicad_pcb  clockwise1.kicad_pcb-bak  clockwise1.pro  clockwise1.sch  clockwise1.sch-bak  fp-info-cache  sym-lib-table
src/: Clockface.h  main.cpp
src/common/: DateTime.h  (+1 more)
(+120 files in other folders)
